# Config

./: .gitignore  CMakeLists.txt  Config.sln  Config.vcxproj  Config.vcxproj.filters  configuration.ini
include/: Config.h
src/: Config.cpp  main.cpp
